# neural-weight-analysis-research

./: .env.example  .gitignore  Complete Project Workflow.md  LAMBDA_SETUP.md  README.md  SETUP_SCRIPT_DOCUMENTATION.md  UV_OPTIMIZATION_SUMMARY.md  lambda_aliases.sh  pyproject.toml  run_complete_integrated_workflow.sh  run_small_model_test.sh  setup.sh  setup_claude.md  setup_dev.sh  setup_lambda.sh  test_protection_methods.sh
.claude/: settings.local.json
complete_analysis_20250920_142927/: available_models.txt  model_info.txt
complete_analysis_20250920_142927/step2_original_security/: pipeline_summary.yaml
complete_analysis_20250920_142927/step3_ensemble_discovery/: research_summary.md
complete_pipeline_results/: .nfs9893430f66b03d14000004ed  pipeline_summary.yaml
complete_pipeline_results/phase_a/: critical_weights.yaml
complete_pipeline_results/phase_b/: attack_results.yaml
complete_pipeline_results/phase_c/: protection_results.yaml
docs/: COMMAND_REFERENCE.md  README.md  SUCCESSFUL_TEST_RESULTS.md
docs/research/: ATTACK_DEFENSE_ANALYSIS.md  RESEARCH_ROADMAP.md
docs/workflows/: phase1_commands.md
examples/scripts/: basic_usage.py
gpt2_analysis_complete/: pipeline_summary.yaml
instructions/: Critical Weight Analysis & Cybersecurity Research Tool Phase 1.txt  Critical Weight Analysis & Cybersecurity Research Tool v2.txt  PROJECT_CONTEXT.md
scripts/: run_complete_integrated_workflow.sh  run_phase1_phase2_workflow.sh  run_phase1_workflow.sh
tests/: __init__.py  test_basic_functionality.py  test_fixed_protection.py  test_setup.py
(+87 files in other folders)
